--- a/Nodes/UI/Screens/SIS/SIS.yaml
+++ b/Nodes/UI/Screens/SIS/SIS.yaml
@@ -4283,7 +4283,7 @@ Children:
       - Name: Model
         Type: NodePointer
         DataType: NodeId
-        Value: "/Objects/Dyrima/Model/Prueba/ PieChart Variables"
+        Value: "/Objects/Dyrima/DataStores/MainDatabase"
         Children:
         - Name: ItemKind
           Type: PropertyType
@@ -4355,6 +4355,27 @@ Children:
         Type: BaseDataVariableType
         DataType: SortOrderEnum
         ModellingRule: Optional
+      - Name: Query
+        Type: BaseDataVariableType
+        DataType: String
+        ModellingRule: Optional
+        Value: "SELECT \"SIFID\" FROM SIS_Layers ORDER BY \"SIFID\""
+      - Name: DisplayValuePath
+        Type: BaseDataVariableType
+        DataType: LocalizedText
+        Children:
+        - Name: DynamicLink
+          Type: DynamicLink
+          DataType: NodePath
+          Value: "{Item}/SIFID"
+      - Name: SelectedValuePath
+        Type: BaseDataVariableType
+        DataType: BaseDataType
+        Children:
+        - Name: DynamicLink
+          Type: DynamicLink
+          DataType: NodePath
+          Value: "{Item}/SIFID"
   - Name: SIL
     Type: Rectangle
     Children:
