--- a/Nodes/UI/UI.yaml
+++ b/Nodes/UI/UI.yaml
@@ -369,6 +369,7 @@ Children:
   - Name: Protocol
     Type: BaseDataVariableType
     DataType: Protocol
+    Value: 1
   - Name: IPAddress
     Type: BaseDataVariableType
     DataType: String
